--- a/src/main/resources/templates/user/authentication.html
+++ b/src/main/resources/templates/user/authentication.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>
-        로그인
+        이메일 인증
     </title>
 </head>
 
@@ -14,10 +14,13 @@
 <h6 class="font-weight-light">
     이메일로 보내드린 인증번호를 입력하세요.
 </h6>
-<form class="pt-3" th:action="@{link}"  method="post">
+<form class="pt-3" th:action="@{${link}}"  method="post" th:onsubmit="return checkForm()">
     <div class="form-group">
         <label for="id">인증번호</label>
         <input type="text" class="form-control form-control-lg" id="emailKey" name="emailKey" placeholder="인증번호">
+    </div>
+    <div class="mt-3">
+        <button type="button" class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn" id="resend">재전송</button>
     </div>
     <div class="mt-3">
         <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">인증하기</button>
@@ -25,8 +28,28 @@
 </form>
 
 <script type="text/javascript">
+    /**
+     * 이메일 재전송
+     */
+    document.getElementById("resend").addEventListener('click', function () {
+        const url = [[${resendLink}]];
+        checkAPI(url);
+    });
+
+    /**
+     *  전송 전에 form text 확인하기
+     */
+    function checkForm() {
+        const emailKey = document.getElementById("emailKey").textContent.trim();
+
+        if(emailKey==null && emailKey==''){
+            alert("인증번호를 입력해주세요");
+        }
+        return true;
+    }
 
 </script>
+<script src="/js/common/API.js"></script>
 <!-- End custom js for this page-->
 
 </body>
