--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -20,13 +20,13 @@
         <label for="id">
             <div class="badge  badge-warning">필수</div>
             아이디</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{id}" placeholder="아이디" required>
+        <input type="text" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{id}" placeholder="아이디" required>
     </div>
     <div class="form-group">
         <label for="pw">
             <div class="badge  badge-warning">필수</div>
             비밀번호</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{pw}" placeholder="비밀번호" required>
+        <input type="text" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{pw}" placeholder="비밀번호" required>
     </div>
     <div class="form-group">
         <label for="pwCheck">
@@ -36,25 +36,25 @@
     </div>
     <div class="form-group">
         <label for="name">이름</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{name}" placeholder="이름">
+        <input type="text" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{name}" placeholder="이름">
     </div>
     <div class="form-group">
         <label for="nickname">
             <div class="badge  badge-warning">필수</div>
             닉네임</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{nickname}" placeholder="닉네임" required>
+        <input type="text" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{nickname}" placeholder="닉네임" required>
     </div>
     <div class="form-group">
         <label for="phone">
             <div class="badge  badge-warning">필수</div>
             핸드폰번호</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{phone}" placeholder="01012345678" required>
+        <input type="text" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{phone}" placeholder="01012345678" required>
     </div>
     <div class="form-group">
         <label for="email">
             <div class="badge  badge-warning">필수</div>
             이메일</label>
-        <input type="email" class="form-control form-control-lg" th:field="*{email}" placeholder="이메일" required>
+        <input type="email" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{email}" placeholder="이메일" required>
     </div>
     <!--
     <div class="mb-4">
@@ -78,47 +78,10 @@
 <!-- container-scroller -->
 <!-- Custom js for this page-->
 <script type="text/javascript">
-    //check하는 api 호출
-    function checkAPI(searchType, searchData) {
-
-        fetch('/join/check/'+searchType+'/' + searchData)
-            .then((response) => {
-                if (!response.ok) {
-                    console.log("response.status 오류");
-                    throw new Error("Failed with HTTP code " + response.status);
-                }
-                return response.json();
-            })
-            .then((result) => {
-                if (!!document.getElementById("resText"+ searchType)) {
-                    document.getElementById("resText"+ searchType).remove();
-                }
-                if (!!document.getElementById("res"+ searchType)) {
-                    document.getElementById("res"+ searchType).remove();
-                }
-                const resultText = document.createElement('div');
-                const resultTag = document.createElement('div');
-                if (result) {
-                    resultText.textContent = '사용할 수 있는 아이디 입니다.';
-                    resultText.classList.add("text-success");
-                    resultTag.textContent='1';
-                } else {
-                    resultText.textContent = '사용할 수 없는 아이디 입니다.';
-                    resultText.classList.add("text-danger");
-                    resultTag.textContent='0';
-                }
-                resultTag.id="res"+ searchType;
-                resultTag.style = "display:none;";
-                resultText.id = "resText"+ searchType;
-                document.getElementById(searchType).parentElement.appendChild(resultTag);
-                document.getElementById(searchType).parentElement.appendChild(resultText);
-                return result;
-            })
-            .catch((error) => {
-                console.log(error);
-            });
+    const messageText = [[${user.message}]];
+    if(messageText!=null && messageText !=''){
+        alert(messageText);
     }
-
 
     /**
      * 아이디 중복체크
@@ -253,6 +216,7 @@
 
 </script>
 <script src="/js/common/checkReg.js"></script>
+<script src="/js/common/API.js"></script>
 <!-- End custom js for this page-->
 
 </body>
