--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -14,10 +14,10 @@
 <h6 class="font-weight-light">자신의 계정으로 로그인하세요.</h6>
 <form class="pt-3"  th:action="@{/login/form.do}" method="post"  th:object="${user}">
     <div class="form-group">
-        <input type="text" class="form-control form-control-lg" th:field="*{id}" placeholder="Id">
+        <input type="text" th:errorclass="is-invalid" class="form-control form-control-lg" th:field="*{id}" placeholder="Id">
     </div>
     <div class="form-group">
-        <input type="password" class="form-control form-control-lg" th:field="*{pw}" placeholder="Password">
+        <input type="password" th:errorclass="is-invalid" class="form-control form-control-lg" th:field="*{pw}" placeholder="Password">
     </div>
     <div class="mt-3">
         <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
@@ -45,9 +45,27 @@
     </div>
 </form>
 <script type="text/javascript"  th:inline="javascript">
-    const messageText = [[${message}]];
+    const messageText = [[${user.message}]];
     if(messageText!=null && messageText !=''){
         alert(messageText);
+    }
+
+    /**
+     *  전송 전에 form text 확인하기
+     */
+     function checkForm() {
+        const userId = document.getElementById("id").textContent.trim();
+        const userPw = document.getElementById("pw").textContent.trim();
+
+        if(userId==null && userId==''){
+            alert("아이디를 입력해주세요");
+            return false;
+        }
+        if(userPw==null && userPw==''){
+            alert("비밀번호를 입력해주세요");
+            return false;
+        }
+        return true;
     }
 </script>
 </body>
