--- a/src/main/resources/templates/user/userInfo.html
+++ b/src/main/resources/templates/user/userInfo.html
@@ -29,7 +29,7 @@
         <div class="col-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <form class="forms-sample" id="user" th:object="${user}" action="/user/mypage.do" method="post" >
+                    <form class="forms-sample" id="user" th:object="${user}" action="/user/mypage.do" method="post"th:onsubmit="return checkForm()">
                         <div class="form-group">
                             <label for="id">아이디</label>
                             <div type="text" class="form-control" id="id" th:text="*{id}"></div>
@@ -41,7 +41,7 @@
                         </div>
                         <div class="form-group">
                             <label for="pw">비밀번호</label>
-                            <input type="password" class="form-control" id="pw">
+                            <input type="password" class="form-control" id="pw" name="pw">
                         </div>
                         <div class="form-group">
                             <label for="pwCheck">비밀번호 확인</label>
@@ -76,36 +76,10 @@
     document.getElementById("email").addEventListener('input', function () {
         const userEmail = document.getElementById("email").value;
         //정규식
-        const emailReg = /.+@[a-zA-Z]+(\.[a-zA-Z]+){1,2}/g;
+        const emailReg = new RegExp(checkEmailReg);
 
         if (emailReg.test(userEmail)) {
-            fetch('/join/check/email/' + userEmail)
-                .then((response) => {
-                    if (!response.ok) {
-                        console.log("response.status 오류");
-                        throw new Error("Failed with HTTP code " + response.status);
-                    }
-                    return response.json();
-                })
-                .then((result) => {
-
-                    if (!!document.getElementById("resEmail")) {
-                        document.getElementById("resEmail").remove();
-                    }
-                    const resultTag = document.createElement('p');
-                    if (result) {
-                        resultTag.textContent = '사용할 수 있는 이메일 입니다.';
-                        resultTag.classList.add("text-success");
-                    } else {
-                        resultTag.textContent = '사용할 수 없는 이메일 입니다.';
-                        resultTag.classList.add("text-danger");
-                    }
-                    resultTag.id = "resEmail";
-                    document.getElementById("email").parentElement.appendChild(resultTag);
-                })
-                .catch((error) => {
-                    console.log(error);
-                });
+            checkAPI('email', userEmail);
         } else {
             if (!!document.getElementById("resEmail")) {
                 document.getElementById("resEmail").remove();
@@ -141,16 +115,21 @@
 
         const pw = document.getElementById("pw").value;
         const pwCheck = document.getElementById("pwCheck").value;
-        const pwReg = /(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}/g;
 
+        let result_pw = false;
+        let result_pwCheck = false;
+
+        //비밀번호 규칙
         if (!!document.getElementById("resPw")) {
             document.getElementById("resPw").remove();
         }
         if (pw.length > 1) {
-            const resultPwTag = document.createElement('p');
-            if (pwReg.test(pw)) {
+            const resultPwTag = document.createElement('div');
+            const checkPw = new RegExp(checkPwReg);
+            if (checkPw.test(pw)) {
                 resultPwTag.textContent = '사용할 수 있는 비밀번호 입니다.';
                 resultPwTag.classList.add("text-success");
+                result_pw = true;
             } else {
                 resultPwTag.textContent = '사용할 수 없는 비밀번호 입니다.';
                 resultPwTag.classList.add("text-danger");
@@ -159,14 +138,16 @@
             document.getElementById("pw").parentElement.appendChild(resultPwTag);
         }
 
+        //비밀번호 확인
         if (!!document.getElementById("resPwCheck")) {
             document.getElementById("resPwCheck").remove();
         }
         if (pwCheck.length > 1) {
-            const resultPwCheckTag = document.createElement('p');
+            const resultPwCheckTag = document.createElement('div');
             if (pw === pwCheck) {
                 resultPwCheckTag.textContent = '비밀번호와 값이 같습니다.';
                 resultPwCheckTag.classList.add("text-success");
+                result_pwCheck = true;
             } else {
                 resultPwCheckTag.textContent = '비밀번호와 값이 다릅니다.';
                 resultPwCheckTag.classList.add("text-danger");
@@ -174,9 +155,36 @@
             resultPwCheckTag.id = "resPwCheck";
             document.getElementById("pwCheck").parentElement.appendChild(resultPwCheckTag);
         }
+
+        if (result_pw && result_pwCheck) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    /**
+     *  전송 전에 form text 확인하기
+     */
+    function checkForm() {
+        if(document.getElementById("pw").value.length == 0){
+            document.getElementById("user").delete("pw");
+        }
+        else if(!checkPw()){
+            alert("비밀번호가 규칙에 맞지 않습니다.");
+            return false
+        }
+        if(checkEmailRes != '1'){
+            alert("이메일이 규칙에 맞지 않습니다.");
+            return false
+        }
+        return true;
     }
 
 </script>
+
+
+<script src="/js/common/checkReg.js"></script>
 <!-- End custom js for this page-->
 
 </body>
